--- a/torch/CMakeLists.txt
+++ b/torch/CMakeLists.txt
@@ -231,6 +231,8 @@ CONFIGURE_FILE(
 if (NOT NO_API AND NOT USE_ROCM)
   list(APPEND TORCH_SRCS
     ${TORCH_SRC_DIR}/csrc/api/src/cuda.cpp
+    ${TORCH_SRC_DIR}/csrc/api/src/data/ctf/ctf_parser.cpp
+    ${TORCH_SRC_DIR}/csrc/api/src/data/ctf/reader.cpp
     ${TORCH_SRC_DIR}/csrc/api/src/data/datasets/mnist.cpp
     ${TORCH_SRC_DIR}/csrc/api/src/data/samplers/base.cpp
     ${TORCH_SRC_DIR}/csrc/api/src/jit.cpp
